Members: fix position of xprofile tab on Edit User screen
Fixes overlap with the page title on the Page and Extended Profile tabs.
Also fixes overlap with any page notifications that may be introduced
by other plugins.

Fixes #6631

Props daniluk4000, slaFFik

git-svn-id: https://buddypress.svn.wordpress.org/trunk@10274 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-members/admin/css/admin.css
+++ b/src/bp-members/admin/css/admin.css
@@ -1,7 +1,8 @@
 /**** BP Members Profile Administration Screens ****/
 
 div#profile-page.wrap form#your-profile {
-	position:relative;
+	position: relative;
+	padding-top: 50px;
 }
 
 div#profile-page.wrap form#your-profile h3:first-of-type {
@@ -10,7 +11,7 @@ div#profile-page.wrap form#your-profile h3:first-of-type {
 
 div#profile-page.wrap form#your-profile #profile-nav {
 	position: absolute;
-	top: -3.65em;
+	top: 0;
 	width: 97%;
 }
 
